updated file with user_login mark

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 markers =
     need_review: marker for the tests in the final Stepik project
+    user_login: marker for the test class with registration
