added total 3 markers

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
 markers =
+    login_guest: marker for the test class with registration
     need_review: marker for the tests in the final Stepik project
-    user_login: marker for the test class with registration
+    user_login: marker for the test class with login options
