added regression and smoke marks

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,6 @@
 markers =
     login_guest: marker for the test class with registration
     need_review: marker for the tests in the final Stepik project
+    regression: regression tests
+    smoke: smoke tests
     user_login: marker for the test class with login options
